--- a/pages/References/assets/css/style.css
+++ b/pages/References/assets/css/style.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
 }
 
-
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #e9e035;
@@ -115,12 +114,14 @@ button:active, .nav-button:active {
 }
 
 .references {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
-    margin-top: 30px;
+    font-family: 'Playwrite HR', sans-serif;
+    font-weight: 400; /* Adjust the weight as needed */
+    /* Add any other styling you need */
+    font-size: 1.5em; /* Example: Adjust the size as needed */
+    color: #000000; /* Example: Adjust the color as needed */
+    text-align: center; /* Example: Adjust alignment as needed */
+    margin-bottom: 20px; /* Example: Adjust margin as needed */
+    margin-top: 100px;
 }
 
 .logo-grid {
@@ -128,6 +129,7 @@ button:active, .nav-button:active {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
     justify-items: center;
+    margin-top: 50px;
 }
 
 .logo-grid img {
@@ -142,6 +144,29 @@ button:active, .nav-button:active {
     align-items: center;
     padding: 10px; /* Optional: Adjust padding for better spacing */
     border-radius: 8px; /* Optional: Add rounded corners */
+}
+
+.tools-used {
+    font-family: 'Playwrite HR', sans-serif;
+    font-weight: 400;
+    font-size: 1.5em;
+    color: #000000;
+    text-align: center;
+    margin: 50px 0;
+    margin-top: 50px;
+}
+
+.center-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.center-image img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 50px;
 }
 
 footer {
@@ -161,7 +186,6 @@ footer .copyright {
     flex: 1;
     text-align: left;
     padding: 10px 20px;
-    height: 10x;
 }
 
 footer .social {
